# DeepMTP

./: .gitignore  .travis.yml  LICENSE.md  README.md  environment.yml  requirements.txt  requirements_gpu.txt  setup.cfg  setup.py
.github/workflows/: running_tests.yml
DEMO/: hyperband_example.ipynb  load_datasets.ipynb  main_example_DP.ipynb  main_example_MC.ipynb  main_example_MLC.ipynb  main_example_MTL.ipynb  main_example_MTR.ipynb  random_search_example.ipynb
DeepMTP/: branch_models.py  dataset.py  hpo_worker.py  main.py  main_streamlit.py  random_search.py  random_search_streamlit.py  simple_hyperband.py  simple_hyperband_streamlit.py  tests.py
DeepMTP/tests/: data_generation.ipynb  test_branch_models.py  test_data_utils.py  test_dataset.py  test_eval_utils.py  test_hpo_worker.py  test_main.py  test_model_utils.py  test_random_search.py  test_simple_hyperband.py  test_utils.py
DeepMTP/utils/: data_utils.py  data_utils_v2.py  eval_utils.py  model_utils.py  utils.py
docs/: requirements.txt
docs/doc_env/: pyvenv.cfg
docs/source/: DeepMTP.rst  DeepMTP.utils.rst  conf.py  index.rst  modules.rst
docs/source/tutorial/: configuration.rst  credits.rst  demos.rst  hpo.rst  installation.rst  loading_datasets.rst
