[metadata]
name = DeepMTP
author = Dimitris Iliadis
author_email = dimitrios.iliadis@ugent.be
description = a Deep Learning Framework for Multi-target Prediction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/diliadis/DeepMTP
license = MIT
license_files = LICENSE.md
classifiers =
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7
install_requires =
    liac-arff
    matplotlib
    matplotlib-inline
    more-itertools
    numpy
    pandas
    pillow
    prettytable
    scikit-learn
    scikit-multilearn
    scipy
    wandb
    wget
    tensorboard
    streamlit
    tqdm